refactor network plots

--- a/inst/02_genre_trees.qmd
+++ b/inst/02_genre_trees.qmd
@@ -68,13 +68,6 @@ metal --> rock
 metal -.-x pop
 ```
 
-<!-- ## Genre mapping
-For performing classification tasks later on, we need to transform our multilabel genre assignments into single-label assignements. Therefore, we choose the initial genre from each track's user assigned tags. We identify the most appropriate initial genre by following the path from the root of the tree to the leaf genres, always choosing the path with the highest number of votes down all sub-branches in the tracks genre list. When we reach a genre that has no heirs in the track's genre list, we assign this genre as the initial genre for this track. -->
-
-<!-- Was ist mit einem Fall, wo zwar ein Track in einem Tiefen Genre ist, aber nicht der gesamte Path? Das könnte zum Beispiel Classical erklären in den Leafs? Die bleiben vielleicht alle bei Classic Rock stecken und kommen gar nicht zu classical -->
-
-<!-- TODO: Make an example plot / multiple example plots -->
-
 # Genre Tree for MusicBrainz
 
 :::{.column-screen-inset-right}
@@ -82,7 +75,7 @@ For performing classification tasks later on, we need to transform our multilabe
 **Navigation:** Click and drag to pan • Mouse wheel to zoom in/out • Click "Center Root" to reset view • Click blue nodes to expand/collapse
 ```{r musicbrainz-interactive-tree, echo=FALSE}
 mb <- read_feather_with_lists("../data/filtered_mb_long.feather")
-plot_network_graph(
+plot_interactive_tree_graph(
   readRDS("../models/trees/MusicBrainz_graph.rds"),
   get_sizes_lookup(mb),
   get_fills_lookup(mb), 
@@ -92,6 +85,8 @@ plot_network_graph(
 :::
 :::
 
+
+
 # Genre Tree for Spotify
 Please click on the nodes to explore sub-genres. The font size is fixed to ensure readability. Node size represents the number of songs in each genre.
 
@@ -100,7 +95,7 @@ Please click on the nodes to explore sub-genres. The font size is fixed to ensur
 **Navigation:** Click and drag to pan • Mouse wheel to zoom in/out • Click "Center Root" to reset view • Click blue nodes to expand/collapse
 ```{r spotify-interactive-tree, echo=FALSE}	
 s <- read_feather_with_lists("../data/filtered_s_long.feather")
-plot_network_graph(
+plot_interactive_tree_graph(
   readRDS("../models/trees/Spotify_graph.rds"),
   get_sizes_lookup(s),
   get_fills_lookup(s), 
